fix: align text center in mobile view

--- a/src/components/LoadingSpinner/LoadingSpinner.scss
+++ b/src/components/LoadingSpinner/LoadingSpinner.scss
@@ -5,8 +5,11 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
+    text-align: center;
     @include media(sm) {
       max-width: 450px;
+      text-align: left;
     }
     @include media(md) {
       flex-direction: row;
